# rxml

./: .dockerignore  COPYING  Cargo.toml  README.md
docker/: fuzz-entrypoint.sh  fuzz.Dockerfile
fuzz/: Cargo.toml
fuzz/in/: 8.xml
fuzz/src/: main.rs
rxml/: Cargo.toml  README.md
rxml/benches/: parse.rs  q.rs  utf8dec.rs
rxml/examples/: pipe.rs
rxml/fuzz/: .gitignore  Cargo.toml
rxml/fuzz/src/: main.rs
rxml/src/: bufq.rs  context.rs  driver.rs  errctx.rs  error.rs  future.rs  lib.rs  selectors.rs  strings.rs  tests.rs
rxml/src/lexer/: mod.rs  ranges.rs  read.rs
rxml/src/parser/: common.rs  mod.rs  namespaces.rs  raw.rs
rxml/src/writer/: mod.rs
rxml/util/: fuzz-to-testcase.py
rxml_proc/: Cargo.toml  README.md
rxml_proc/examples/: test.rs
rxml_proc/src/: lib.rs
rxml_validation/: Cargo.toml  README.md
rxml_validation/src/: lib.rs  selectors.rs  strings.rs
src/: bufq.rs  context.rs  dump.rs  error.rs  lib.rs  selectors.rs  strings.rs  tests.rs
src/lexer/: mod.rs  read.rs  selectors.rs  utf8.rs
src/parser/: mod.rs
util/: fuzz-to-testcase.py
