[package]
name = "rxml"
version = "0.2.0-alpha.0"
authors = ["Jonas Schäfer <jonas@zombofant.net>"]
license = "MIT"
edition = "2018"
description = "Minimalistic, restricted XML 1.0 parser which does not include dangerous XML features."
readme = true
repository = "https://github.com/horazont/rxml"
keywords = ["xml"]
categories = ["parsing"]
exclude = ["/fuzz", "/util", "/target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
mt = []
