[package]
name = "rxml"
version = "0.6.0-alpha.0"
authors = ["Jonas Schäfer <jonas@zombofant.net>"]
license = "MIT"
edition = "2018"
description = "Minimalistic, restricted XML 1.0 parser which does not include dangerous XML features."
readme = true
repository = "https://github.com/horazont/rxml"
keywords = ["xml"]
categories = ["parsing"]
exclude = ["/fuzz", "/util", "/target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weak-table = { version = "0.3", optional = true }
smartstring = { version = "0.2" }
rxml_validation = { path = "../rxml_validation", version = "0.6.0-alpha.0" }
tokio = { version = "^1", features = ["io-util"], optional = true }
async-trait = { version = "^0.1", optional = true }

[features]
mt = []
shared_ns = ["weak-table"]
default = ["async"]
async = ["tokio", "async-trait", "mt"]

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros"] }
tokio-test = { version = "^0.4" }
criterion = { version = "^0.3", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "q"
harness = false

[[bench]]
name = "utf8dec"
harness = false
