[package]
name = "rxml"
version = "0.9.1"
authors = ["Jonas Schäfer <jonas@zombofant.net>"]
license = "MIT"
edition = "2018"
description = "Minimalistic, restricted XML 1.0 parser which does not include dangerous XML features."
readme = true
repository = "https://github.com/horazont/rxml"
keywords = ["xml"]
categories = ["parsing"]
exclude = ["/fuzz", "/util", "/target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weak-table = { version = "^0.3", optional = true }
smartstring = { version = "^1" }
rxml_validation = { version = "^0.9.1" }
tokio = { version = "^1", features = ["io-util"], optional = true }
bytes = { version = "^1" }
rxml_proc = { version = "^0.9.1", optional = true }
pin-project-lite = { version = "^0.2", optional = true }
futures-core = { version = "^0.3", optional = true}

[features]
mt = []
shared_ns = ["weak-table"]
default = ["async"]
async = ["tokio", "mt", "pin-project-lite"]
macros = ["rxml_proc"]
stream = ["async", "futures-core"]

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros"] }
tokio-test = { version = "^0.4" }
criterion = { version = "^0.3", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "q"
harness = false

[package.metadata.docs.rs]
all-features = true
