[package]
name = "rxml_proc"
version = "0.8.0-alpha.0"
authors = ["Jonas Schäfer <jonas@zombofant.net>"]
license = "MIT"
edition = "2018"
description = "Macros to, at compile time, validate strings against the CData, Name and NCName productions from the XML 1.0 grammar."
repository = "https://github.com/horazont/rxml"
keywords = ["xml"]
categories = ["parsing"]
readme = true

[dependencies]
syn = { version = "^1" }
rxml_validation = { version = "0.8.0-alpha.0" }
quote = { version = "^1" }

[lib]
proc-macro = true

