[package]
name = "rxml_validation"
version = "0.5.0-alpha.0"
authors = ["Jonas Schäfer <jonas@zombofant.net>"]
license = "MIT"
edition = "2018"
description = "Plumbing crate for rxml and rxml_proc crates."
repository = "https://github.com/horazont/rxml"
keywords = ["xml"]
readme = true

[dependencies]

[dev-dependencies]
rxml = { path = "../rxml" }
rxml_proc = { path = "../rxml_proc" }
